--- a/Views/Home/Index.html
+++ b/Views/Home/Index.html
@@ -1,6 +1,15 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+<!DOCTYPE html>
+<html lang="it">
+
+<head>
+  <title>Vendita orologi</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
 
 <div class="container-lg">
   <h2>Ultimi arrivi</h2>  
@@ -15,15 +24,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" align="center">
       <div class="item active">
-        <img src="./images/1.jpg" alt="1.jpg" style="width:40%;">
+        <img src="1.jpg" alt="1.jpg" style="width:40%;">
       </div>
 
       <div class="item">
-        <img src="./images/2.jpg" alt="2.jpg" style="width:40%;">
+        <img src="2.jpg" alt="2.jpg" style="width:40%;">
       </div>
     
       <div class="item">
-        <img src="./images/3.jpg" alt="3.jpg" style="width:40%;">
+        <img src="3.jpg" alt="3.jpg" style="width:40%;">
       </div>
     </div>
 
@@ -45,39 +54,42 @@
     <div class="row text-center">
       <div class="col-6 col-md-2 mb-4">
         <a href="#" class="text-decoration-none">
-          <img src="./images/1.jpg" class="img-fluid mb-2" style="width:80%;" alt="New In">
+          <img src="1.jpg" class="img-fluid mb-2" style="width:80%;" alt="New In">
           <h6 class="text-dark">NEW IN</h6>
         </a>
       </div>
       <div class="col-6 col-md-2 mb-4">
         <a href="#" class="text-decoration-none">
-          <img src="./images/2.jpg" class="img-fluid mb-2" style="width:80%;" alt="Charms">
+          <img src="2.jpg" class="img-fluid mb-2" style="width:80%;" alt="Charms">
           <h6 class="text-dark">CHARMS</h6>
         </a>
       </div>
       <div class="col-6 col-md-2 mb-4">
         <a href="#" class="text-decoration-none">
-          <img src="./images/3.jpg" class="img-fluid mb-2" style="width:80%;" alt="Bracelets">
+          <img src="3.jpg" class="img-fluid mb-2" style="width:80%;" alt="Bracelets">
           <h6 class="text-dark">BRACELETS</h6>
         </a>
       </div>
       <div class="col-6 col-md-2 mb-4">
         <a href="#" class="text-decoration-none">
-          <img src="./images/1.jpg" class="img-fluid mb-2" style="width:80%;" alt="Rings">
+          <img src="1.jpg" class="img-fluid mb-2" style="width:80%;" alt="Rings">
           <h6 class="text-dark">RINGS</h6>
         </a>
       </div>
       <div class="col-6 col-md-2 mb-4">
         <a href="#" class="text-decoration-none">
-          <img src="./images/2.jpg" class="img-fluid mb-2" style="width:80%;" alt="Earrings">
+          <img src="2.jpg" class="img-fluid mb-2" style="width:80%;" alt="Earrings">
           <h6 class="text-dark">EARRINGS</h6>
         </a>
       </div>
       <div class="col-6 col-md-2 mb-4">
         <a href="#" class="text-decoration-none">
-          <img src="./images/3.jpg" class="img-fluid mb-2" style="width:80%;" alt="Necklaces">
+          <img src="3.jpg" class="img-fluid mb-2" style="width:80%;" alt="Necklaces">
           <h6 class="text-dark">NECKLACES</h6>
         </a>
       </div>
     </div>
   </div>
+
+</body>
+</html>
