--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using WatchStoreApp
-@using WatchStoreApp.Models
+@* @using WatchStoreApp.Models *@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
