--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,15 +30,17 @@
                         </li>
                     </ul>
                     <!-- Bottone Carrello -->
-                    <button
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                      <button
                         type="button"
                         class="btn btn-cart"
                         data-bs-toggle="modal"
                         data-bs-target="#cartModal"
-                        style="background: none; border: none; padding: 0"
-                    >
+                        style="background: none; border: none; padding: 0">
                         <i class="bi bi-bag" style="font-size: 2rem"></i>
-                    </button>
+                      </button>
+                    }
                     <partial name="_LoginPartial" />
                 </div>
             </div>
