modifica ed elimina prodotto funzionanti

--- a/Views/Prodotti/Index.cshtml
+++ b/Views/Prodotti/Index.cshtml
@@ -224,7 +224,7 @@
                                 }
                                 @if (User.IsInRole("Admin"))
                                 {
-                                    <a asp-controller="Prodotti" asp-action="CancellaProdotto" asp-route-id="@orologio.Id" class="btn btn-outline-secondary btn-sm">Elimina</a>
+                                    <a asp-controller="Prodotti" asp-action="EliminaProdotto" asp-route-id="@orologio.Id" class="btn btn-outline-secondary btn-sm">Elimina</a>
                                 }
                             </div>
                         </div>
